scribble-test/src/test/resources/bad/syntax/disamb/doarglistdel/DoArgList04.scr
module bad.syntax.disamb.doarglist.DoArgList04;


global protocol Foo(role A, role B)
{
	1() from A to B;
	do Bar<2(), 3()>(A, B);
}

global protocol Bar<sig M1>(role C, role D)
{
	M1 from C to D;
}
